Configuration in the controller, Dtos and write and read